classDiagram
    class Bundle {
        +key_of()
        +to_dict()
        +ordered()
        +update()
        +setdefault()
        +pop()
        +popitem()
        +clear()
    }
    class ErrorPair {
    }
    class EstimatorScores {
    }
    class OverallMetrics {
    }
    class BenignMetrics {
    }
    class FamilyMetrics {
    }
    class LocalizerScores {
    }
    class TrustScores {
    }
    class JacobianOutputs {
    }
    Bundle <|-- BenignMetrics
    Bundle <|-- ErrorPair
    Bundle <|-- EstimatorScores
    Bundle <|-- FamilyMetrics
    Bundle <|-- JacobianOutputs
    Bundle <|-- LocalizerScores
    Bundle <|-- OverallMetrics
    Bundle <|-- TrustScores
